# claude-agent-to-agent

./: # API usage primer for Claude.md  # Integration Plan into Unified Agent System .md  # Paillier Cryptosystem – Quick Referenc.md  .dockerignore  .gitignore  .project  AGENTS.md  AGENTS_SDK_MIGRATION_SUMMARY.md  AI_Collaboration_Strategic_Analysis.md  AI_Interactions_UPOF_Analysis.md  CLAUDE.md  CLI_LEAF_NODE_ANALYSIS.md  CLI_LEAF_NODE_FINAL_SUMMARY.md  CLI_LEAF_NODE_SUMMARY.md  CODE_EXECUTION_IMPLEMENTATION.md  Cognitive-Inspired Deep Learning Optimization.md  CoreEquation.swift  CorrectedPhaseSpaceAnalyzer.swift  DOCKER_README.md  DYNAMICAL_SYSTEMS_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.ollama  EnDePre.java  Executive_Brief_AI_Networks.md  FUNDING_PROPOSAL.md  HOW_TO_HANDLE_MATH_EMOTIONAL.md  IMPLEMENTATION_ROADMAP.md  JAVA_LEAF_NODE_FINAL_SUMMARY.md  JAVA_LEAF_NODE_TESTING_SUMMARY.md  LEAF_NODE_ANALYSIS_BEST_PRACTICES.md  LEAF_NODE_ANALYSIS_BEST_PRACTICES_PART2.md  LEAF_NODE_ANALYSIS_REPORT.md  LEAF_NODE_ANALYSIS_TEMPLATES.md  LEAF_NODE_BEST_PRACTICES_INDEX.md  LINTING_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_AGENTS_SDK.md  MIGRATION_SUMMARY.md  Makefile  OATES_WALKTHROUGH_COMPLETE_IMPLEMENTATION.md  (+128 more)
claude-agent-framework/python/: pixi.toml  pyproject.toml  requirements.txt
claude-agent-framework/python/claude_agent/: __init__.py  version.py
claude-agent-framework/python/claude_agent/cli/: __init__.py  main.py
claude-agent-framework/python/claude_agent/core/: __init__.py  agent.py  config.py
claude-agent-framework/python/claude_agent/tools/: __init__.py  registry.py
claude-agent-framework/python/claude_agent/tools/beta/: __init__.py  code_execution.py  computer_use.py
claude-agent-framework/python/claude_agent/tools/builtin/: __init__.py  file_tools.py  think.py
claude-agent-framework/python/claude_agent/tools/mcp/: __init__.py  (+2 more)
claude-agent-framework/python/claude_agent/utils/: __init__.py
claude-agent-framework/python/examples/: quick_start.py
claude-agent-framework/python/tests/: test_basic.py
(+315 files in other folders)
